Bug 169524 - FILESAVE PPTX Paragraphs in shapes get 0.6 cm before indent
Summary: FILESAVE PPTX Paragraphs in shapes get 0.6 cm before indent
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2025-11-18 20:17 UTC by Gabor Kelemen (Collabora)
Modified: 2025-12-16 09:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Impress (11.81 KB, application/vnd.oasis.opendocument.presentation)
2025-11-18 20:17 UTC, Gabor Kelemen (Collabora)
Details
The example file saved in master as PPTX (8.08 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-11-18 20:17 UTC, Gabor Kelemen (Collabora)
Details
The original and PPTX in Impress (83.42 KB, image/png)
2025-11-18 20:18 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-11-18 20:17:36 UTC
Created attachment 204073 [details]
Example file from Impress

When saving attached ODP to PPTX and reopening, some paragraphs get 0.6 cm indent instead of preserving 0.

1. Open attached file
2. Save as PPTX, reload
-> non-bulleted paragraphs have 0.6 cm Before Text Indent

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8fa51cec19eb89ef1506adfd461e5fdbcb4477a
CPU threads: 32; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

Seems to have started in 

commit 629105991ee77335f856d746ef44408414cc150a
Author: Balazs Varga <balazs.varga@collabora.com>
Date:   Fri Aug 29 11:00:19 2025 +0200

    Related: tdf#111927 - PPTX: fix placeholder title text becomes small
    
    after clicking in&out
Comment 1 Gabor Kelemen (Collabora) 2025-11-18 20:17:58 UTC
Created attachment 204074 [details]
The example file saved in master as PPTX
Comment 2 Gabor Kelemen (Collabora) 2025-11-18 20:18:35 UTC
Created attachment 204075 [details]
The original and PPTX in Impress
Comment 3 Buovjaga 2025-11-19 06:35:56 UTC
Repro.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e0d9ef6fd8ce744d5a296798e2a4a56ac12b313
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 13 November 2025
Comment 4 Commit Notification 2025-12-12 11:04:35 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/abe023e3222150f86cf56b1cb63109837511eb2c

tdf#169524: Fix left margin import/export in PPTX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-13 07:50:18 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/1b4c25a954ca96079439b6a122697e3848c6e694

tdf#169524: Fix left margin import/export in PPTX

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.