tdf#169524: Fix left margin import/export in PPTX

Change-Id: I167d2bbe1d4238eb7bd264b74898c232fddb7b1f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195006
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 8c98be05acf61af19d4ff891ab74bce0db3f7476)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195369
Tested-by: Jenkins
(cherry picked from commit abe023e3222150f86cf56b1cb63109837511eb2c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195552
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>